--- a/main.html
+++ b/main.html
@@ -3,10 +3,22 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<style>
+		.box{
+			width: 100px;
+			height:100px;
+			border-radius: 10%;
+		}
+	</style>
 </head>
 
 <body>
+	<div class="container">
+		<div class="box">1</div>
+		<div class="box">2</div>
+		<div class="box">4</div>
+		<div class="box">5</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
