--- a/main.html
+++ b/main.html
@@ -3,13 +3,7 @@
 <html>
 
 <head>
-	<style>
-		.box{
-			width: 100px;
-			height:100px;
-			border-radius: 10%;
-		}
-	</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
