--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div class="box">1</div>
-		<div class="box">2</div>
-		<div class="box">4</div>
-		<div class="box">5</div>
+	<div class="holder">
+		<div class="flex-item">1.</div>
+		<div class="flex-item">2.</div>
+		<div class="flex-item">3.</div>
+		<div class="flex-item">4.</div>
 	</div>
 	<!-- the entire body must be written by student -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
