--- a/main.html
+++ b/main.html
@@ -8,10 +8,9 @@
 
 <body>
 	<div class="holder">
-		<div class="flex-item">1.</div>
-		<div class="flex-item">2.</div>
-		<div class="flex-item">3.</div>
-		<div class="flex-item">4.</div>
+		<div class="d1">1</div>
+		<div class="d2">2</div>
+		<div class="d3">3</div>
 	</div>
 
 	<!-- the entire body must be written by student -->
